syntax = "proto3";

package user;

option go_package = "Assignment2_AdelKenesova/user_service/proto";

service UserService {
  rpc RegisterUser (RegisterRequest) returns (UserResponse);
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc GetUserProfile (UserID) returns (UserResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message UserID {
  uint64 id = 1;
}

message UserResponse {
  uint64 id = 1;
  string username = 2;
  string email = 3;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  uint64 user_id = 3;
}
