package service

import (
	"Assignment2_AdelKenesova/user_service/internal/db"
	pb "Assignment2_AdelKenesova/user_service/proto"
	"context"
	"fmt"
	"google.golang.org/grpc/metadata"
	"testing"

	"github.com/stretchr/testify/assert"
)

func TestRegisterUser(t *testing.T) {
	db.InitDB()
	db.DB.Exec("DELETE FROM users") // –û—á–∏—Å—Ç–∫–∞ –ø–µ—Ä–µ–¥ —Ç–µ—Å—Ç–æ–º

	s := &UserService{}
	req := &pb.RegisterRequest{
		Username: "TestUser",
		Email:    "testuser@example.com",
		Password: "securepassword",
	}

	res, err := s.RegisterUser(context.Background(), req)

	assert.NoError(t, err)
	assert.NotNil(t, res)
	assert.Equal(t, req.Email, res.Email)
}

func TestRegisterUser_UserAlreadyExists(t *testing.T) {
	db.InitDB()
	s := &UserService{}

	// –°–Ω–∞—á–∞–ª–∞ —Å–æ–∑–¥–∞—ë–º –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
	req := &pb.RegisterRequest{
		Username: "DuplicateUser",
		Email:    "duplicate@example.com",
		Password: "password123",
	}
	_, _ = s.RegisterUser(context.Background(), req)

	// –ü—ã—Ç–∞–µ–º—Å—è —Å–æ–∑–¥–∞—Ç—å —Å —Ç–µ–º –∂–µ email —Å–Ω–æ–≤–∞
	res, err := s.RegisterUser(context.Background(), req)

	assert.Nil(t, res)
	assert.Error(t, err)
}

func TestAuthenticateUser(t *testing.T) {
	db.InitDB()
	db.DB.Exec("DELETE FROM users") // –û—á–∏—Å—Ç–∫–∞

	s := &UserService{}
	registerReq := &pb.RegisterRequest{
		Username: "AuthUser",
		Email:    "auth@example.com",
		Password: "authpass",
	}
	_, err := s.RegisterUser(context.Background(), registerReq)
	assert.NoError(t, err)

	authReq := &pb.AuthRequest{
		Email:    "auth@example.com",
		Password: "authpass",
	}
	res, err := s.AuthenticateUser(context.Background(), authReq)

	assert.NoError(t, err)
	assert.NotNil(t, res)
	assert.NotEmpty(t, res.Token)
}

func TestGetUserProfile(t *testing.T) {
	db.InitDB()

	// –û—á–∏—Å—Ç–∫–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π + —Å–±—Ä–æ—Å ID-—Å—á—ë—Ç—á–∏–∫–∞ (PostgreSQL)
	db.DB.Exec("DELETE FROM users")
	db.DB.Exec("ALTER SEQUENCE users_id_seq RESTART WITH 1") // ‚úÖ –¥–ª—è PostgreSQL

	s := &UserService{}

	// –†–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
	registerReq := &pb.RegisterRequest{
		Username: "ProfileUser",
		Email:    "profile@example.com",
		Password: "profilepass",
	}
	registerRes, err := s.RegisterUser(context.Background(), registerReq)
	assert.NoError(t, err)

	// –ê—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏—è
	authReq := &pb.AuthRequest{
		Email:    "profile@example.com",
		Password: "profilepass",
	}
	authRes, err := s.AuthenticateUser(context.Background(), authReq)
	assert.NoError(t, err)
	fmt.Println("üß™ Token from auth:", authRes.Token)

	// –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–æ–∫–µ–Ω
	md := metadata.New(map[string]string{
		"authorization": authRes.Token,
	})
	ctx := metadata.NewIncomingContext(context.Background(), md)

	res, err := s.GetUserProfile(ctx, &pb.UserID{})
	assert.NoError(t, err)
	assert.Equal(t, registerRes.Email, res.Email)
	assert.Equal(t, registerRes.Username, res.Username)
}
